--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/app.js"></script>
 </head>
+
 <body>
     <h1>Login Done</h1>
+    <div class="container">
+        <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, officia voluptatum nihil velit repellat, corporis tenetur libero mollitia illum pariatur voluptates atque ut nobis vero animi quaerat iure. Perferendis, itaque.</p>
+        </div>
+    </div>
+
 </body>
+
 </html>
